<resources>
    <string name="app_name">final_project_english_learn_app</string>
    <string name="hello_blank_fragment">chat Frag</string>
    <string name="title_activity_main_activity2_home">MainActivity2Home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment</string>
    <string name="teacher">teacher</string>
    <string name="student">Student</string>
    <string name="already_have_a_account_click_here">Already have a Account click ( here)</string>
    <string name="register">REGISTER</string>
    <string name="password_hint">password</string>
    <string name="register_btn">Register</string>
    <string name="phone_number_hint">Phone No</string>
    <string name="email_hint">Email</string>
    <string name="name_hint">Name</string>
    <string name="communicate">communicate</string>
    <string name="notification">notification</string>
    <string name="share">      share</string>
    <string name="logout">     logout</string>
    <string name="setting">setting</string>
    <string name="profile">profile</string>
    <string name="open_menu">Open</string>
    <string name="close_menu">Close</string>
    <string name="experience_hint">enter your experience and languages</string>
    <string name="phone_number">phone number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_phone">your phone</string>
    <string name="full_name">Full Name</string>
    <string name="emile">emile</string>
    <string name="experience">experience</string>
    <string name="write_all_your_experience_and_languages">write all your experience and languages</string>
    <string name="write_your_full_name">write your full name</string>
    <string name="update">update</string>
    <string name="login">Login</string>
    <string name="login_cap">LOGIN</string>
    <string name="register_cap">Register</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="teacher_name">Teacher name</string>
    <string name="description">description</string>
    <string name="nameTeacher">nameTeacher</string>
    <string name="search">searsh</string>
    <string name="type_a_message">Type a message</string>
    <string name="text_send_message">text send message</string>
    <string name="nameSender">nameSender</string>
    <string name="your_profile">Your profile</string>
    <string name="app_language">      change language</string>
    <string name="delete_account">      delete account</string>
    <string name="list_teacher">list teacher</string>
    <string name="video">videos</string>

</resources>