<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<group android:checkableBehavior="single">

    <item
        android:id="@+id/profile_icon"
        android:icon="@drawable/login_image"
        android:title="@string/profile" />
    <item
        android:id="@+id/noti_icon"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/notification" />
    <item
        android:id="@+id/setting_icon"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/setting" />


</group>

    <group android:checkableBehavior="single">
        <item android:title="@string/communicate"/>

        <item
            android:id="@+id/share_icon"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/share" />
        <item
            android:id="@+id/logout_icon"
            android:icon="@drawable/ic_baseline_logout_24"
            android:title="@string/logout" />

    </group>







</menu>